enlarge AB test choice buttons

--- a/mosi/views/abtest/templates/abtest_test.jinja
+++ b/mosi/views/abtest/templates/abtest_test.jinja
@@ -68,12 +68,15 @@
         </div>
 
         <div class='my-4'>
+            <div class="text-center h4">
+                Velja hér:
+            </div>
             <form class="text-center" id="ratingButtons">
                 <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                    <label class="btn btn-outline-primary center-block border-success rounded-pill-left" id="label1" name="optionsLabel">
+                    <label class="btn btn-outline-primary btn-xlg center-block border-success rounded-pill-left" id="label1" name="optionsLabel">
                         <input class="mx-3 ratingButton" type="radio" name="options" onchange="getRating(value)" id="option1" value="1">A
                     </label>
-                    <label class="btn btn-outline-primary center-block border-success rounded-pill-right" id="label2" name="optionsLabel">
+                    <label class="btn btn-outline-primary btn-xlg center-block border-success rounded-pill-right" id="label2" name="optionsLabel">
                         <input class="mx-3 ratingButton" type="radio" name="options" onchange="getRating(value)" id="option2" value="2">B
                     </label>
                 </div>
