--- a/mosi/views/main/static/styles/main.css
+++ b/mosi/views/main/static/styles/main.css
@@ -256,3 +256,10 @@ a{
 .abtest-border-unfinished {
     border-color: #ff5900 !important;
 }
+
+.btn-xlg, .btn-group-xlg>.btn {
+    padding: 1rem 2rem;
+    font-size: 1.5rem;
+    line-height: 1.5;
+    border-radius: 0.3rem;
+}
