--- a/mosi/views/abtest/templates/abtest_results_voices_table.jinja
+++ b/mosi/views/abtest/templates/abtest_results_voices_table.jinja
@@ -1,14 +1,21 @@
 <table class='table'>    
     <thead>
         <th>
-            Rödd
+            Röddsd
         </th>
         <th>
-            Meðaleinkunn
+            Fjöldi einkunna
         </th>
         <th>
-            Staðalfrávik
+            Valin
         </th>
+        <th>
+            Ekki valin
+        </th>
+        <th>
+            Hlutfall
+        </th>
+    </thead>
     </thead>
     <tbody>
         {% for r in range(per_voice_data.x |length ) %}
