--- a/mosi/views/mos/templates/mos.jinja
+++ b/mosi/views/mos/templates/mos.jinja
@@ -24,7 +24,7 @@
             {{macros.btn_icon('upload', 'r')}}
             Hlaða upp
         </button>
-        <a href='{{url_for("mos.stream_MOS_zip", id=mos.id)}}' class='btn btn-primary btn-sm float-right mr-2 mt-2'>
+        <a href='{{url_for("mos.stream_MOS_zip", mos_id=mos.id)}}' class='btn btn-primary btn-sm float-right mr-2 mt-2'>
             {{macros.btn_icon('download', 'r')}}
             Sækja upptökur
         </a>
@@ -51,17 +51,17 @@
             </a>
         {% endif %}
         {% if ratings | length  > 0%}
-            <a class='btn btn-secondary btn-sm text-success float-right mt-2 mr-2' href='{{url_for("mos.mos_results", id=mos.id)}}'>
+            <a class='btn btn-secondary btn-sm text-success float-right mt-2 mr-2' href='{{url_for("mos.mos_results", mos_id=mos.id)}}'>
                 {{macros.btn_icon('chart-bar', 'r')}}
                 Skoða niðurstöður
             </a>
         {% else %}
-            <a class='btn btn-secondary btn-sm text-success float-right mt-2 mr-2 disabled' href='{{url_for("mos.mos_results", id=mos.id)}}'>
+            <a class='btn btn-secondary btn-sm text-success float-right mt-2 mr-2 disabled' href='{{url_for("mos.mos_results", mos_id=mos.id)}}'>
                 {{macros.btn_icon('chart-bar', 'r')}}
                 Skoða niðurstöður
             </a>
         {% endif %}
-        <a class='btn btn-secondary btn-sm text-success float-right mt-2 mr-2' href='{{url_for("mos.mos_edit_detail", id=mos.id)}}'>
+        <a class='btn btn-secondary btn-sm text-success float-right mt-2 mr-2' href='{{url_for("mos.mos_edit_detail", mos_id=mos.id)}}'>
             {{macros.btn_icon('edit', 'r')}}
             Breyta stillingum
         </a>
@@ -166,7 +166,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Loka</button>
-                <a id='confirmationButton' href='{{url_for("mos.delete_mos_instance", id=1)}}' class='btn btn-danger'>
+                <a id='confirmationButton' href='{{url_for("mos.delete_mos_instance", mos_instance_id=1)}}' class='btn btn-danger'>
                     Eyða
                     {{macros.btn_icon('trash', 'l')}}
                 </a>
@@ -181,7 +181,7 @@
     {{super()}}
     <script>
         function deletebutton(id){
-            $('#deleteModal #confirmationButton').attr('href', '{{url_for("mos.delete_mos_instance", id=1)}}'.replace("1", id));
+            $('#deleteModal #confirmationButton').attr('href', '{{url_for("mos.delete_mos_instance", mos_instance_id=-1)}}'.replace("-1", id));
         }
 
 
