--- a/mosi/views/user/templates/user_list.jinja
+++ b/mosi/views/user/templates/user_list.jinja
@@ -12,9 +12,9 @@
                 {{macros.btn_icon('plus', 'r')}}
                 Búa til notanda
             </a>
-            <a href='{{url_for("user.verifier_create")}}' class='dropdown-item'>
+            <a href='{{url_for("user.organiser_create")}}' class='dropdown-item'>
                 {{macros.btn_icon('plus', 'r')}}
-                Búa til greini
+                Búa til skipuleggjanda
             </a>
         </div>
     {% endif %}
