fixed table for abtest results displaying per voice resutls

--- a/mosi/views/abtest/templates/abtest_results.jinja
+++ b/mosi/views/abtest/templates/abtest_results.jinja
@@ -72,7 +72,7 @@
         </div>
     </div>
 
-    {% if per_voice_data.x |length > 1 %}
+    {% if per_voice_data |length > 1 %}
         <div class="wrapper" style="margin-top: 10px;">
             <div style="background-color: #303030; padding-left: 8px;" data-toggle="collapse" data-target="#collapse-voices" aria-expanded="false" aria-controls="collapse-ratings" style="cursor: pointer;">
                 <p class="py-2 text-success"><i class="fas fa-plus mr-2" aria-hidden="true"></i> Raddir</p>
