--- a/mosi/views/abtest/templates/abtest_results_voices_table.jinja
+++ b/mosi/views/abtest/templates/abtest_results_voices_table.jinja
@@ -1,7 +1,7 @@
 <table class='table'>    
     <thead>
         <th>
-            Röddsd
+            Rödd
         </th>
         <th>
             Fjöldi einkunna
@@ -18,11 +18,29 @@
     </thead>
     </thead>
     <tbody>
-        {% for r in range(per_voice_data.x |length ) %}
+        {% for voice, value in per_voice_data.items() %}
             <tr>
-                <td>{{per_voice_data.x[r]}}</td>
-                <td>{{per_voice_data.y[r]}}</td>
-                <td>{{per_voice_data.std[r]}}</td>
+                <td>{{voice}}</td>
+                <td>{{value['total']}}</td>
+                <td>{{value['positive']}}</td>
+                <td>{{value['total'] - value['positive'] }}</td>
+                <td>
+                {% if abtest.get_ratio_models(value['total'], value['positive']) > 65 %}
+                    <div class="progress">
+                        <div class="progress-bar bg-success" role="progressbar" style="width:{{abtest.get_ratio_models(value['total'], value['positive'])}}%"></div>
+                    </div>                
+                {% elif  abtest.get_ratio_models(value['total'], value['positive']) > 32 %}
+                    <div class="progress">
+                        <div class="progress-bar bg-warning" role="progressbar" style="width:{{abtest.get_ratio_models(value['total'], value['positive'])}}%"></div>
+                    </div>
+
+                {% else %}
+                    <div class="progress">
+                        <div class="progress-bar bg-danger" role="progressbar" style="width:{{abtest.get_ratio_models(value['total'], value['positive'])}}%"></div>
+                    </div>   
+                {% endif %}
+                </td>
+                <td>{{abtest.get_ratio_models(value['total'], value['positive'])}}%</td>
             </tr>
         {% endfor %}
     </tbody>
